--- a/Pages/Calendar.cshtml
+++ b/Pages/Calendar.cshtml
@@ -20,23 +20,6 @@
 
         return classes;
     }
-
-    private string GetRequestClasses(Dictionary<string, object> date, Dictionary<string, object> request)
-    {
-        string classes = "request";
-
-        if ((DateTime)date["date"] == (DateTime)request["start_date"])
-        {
-            classes += " request-start";
-        }
-
-        if ((DateTime)date["date"] == (DateTime)request["end_date"])
-        {
-            classes += " request-end";
-        }
-
-        return classes;
-    }
 }
 
 <div class="text-center">
@@ -65,7 +48,7 @@
                         <div>@String.Format("{0:dd-MM-yy}", date["date"])</div>
                         @foreach (Dictionary<string, object> request in (List<Dictionary<string, object>>) date["requests"])
                         {
-                            <div class="@GetRequestClasses(date, request)">@request["user_id"]</div>
+                            <div class="request @request["request_status"]">@request["user_name"]</div>
                         }
 
                     </div>
