--- a/Pages/Calendar.cshtml.css
+++ b/Pages/Calendar.cshtml.css
@@ -14,22 +14,25 @@
 
 .block {
     height: 13vh;
+    overflow-y: auto;
     padding: 0;
     border: 1px solid rgba(132,180,191);
 }
 
 .request {
-    height: 2.8vh;
+    height: 2.6vh;
+    overflow: hidden;
     border: 2px solid rgba(43,58,103);
     margin: 1px;
+    font-size: 1.5vh
 }
 
 .approved {
-    background: rgba(138,201,38,0.5);
+    background: rgba(138,201,38,0.3);
 }
 
 .pending {
-    background: rgba(255,202,58,0.5);
+    background: rgba(255,202,58,0.3);
 }
 
 .not-in-month {
