--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,10 +1,32 @@
 ﻿@page
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@if (SignInManager.IsSignedIn(User))
+{
+    <h1 align="center">@ViewData["Title"]</h1>
+    <div class="row">
+    <div class="col-md-6" align="left">
+        <section>
+            <p class="approved row-md-2">Approved</p>
+            <p class="pending row-md-2">Pending</p>
+            <p class="updated row-md-2">Updated</p>
+        </section>
+    </div>
+    <div class="col-md-6" align="left">
+        <section>
+        </section>
+    </div>
+    </div>
+} else
+{
+<h1 align="center">Welcome</h1>
+<div>
+    <p>Please <a class="nav-link text-dark row" asp-area="Identity" asp-page="/Account/Login">Login</a> to use this service</p>
 </div>
+
+}
