Move Scaffold into Requests folder

--- a/Pages/Requests/Delete.cshtml
+++ b/Pages/Requests/Delete.cshtml
@@ -1,19 +1,13 @@
 @page
-@model hippolidays.DetailsModel
+@model hippolidays.Pages.Requests.DeleteModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Delete";
 }
 
-<!DOCTYPE html>
+<h1>Delete</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Request</h4>
     <hr />
@@ -31,10 +25,10 @@
             @Html.DisplayFor(model => model.Request.end_date)
         </dd>
     </dl>
+    
+    <form method="post">
+        <input type="hidden" asp-for="Request.request_id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Request?.request_id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
-</body>
-</html>
