--- a/Pages/Requests/Create.cshtml
+++ b/Pages/Requests/Create.cshtml
@@ -1,18 +1,11 @@
 @page
-@model hippolidays.CreateModel
+@model hippolidays.Pages.Requests.CreateModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
+<h1>Create</h1>
 
 <h4>Request</h4>
 <hr />
@@ -41,5 +34,6 @@
     <a asp-page="Index">Back to List</a>
 </div>
 
-</body>
-</html>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
