--- a/Pages/Requests/Edit.cshtml
+++ b/Pages/Requests/Edit.cshtml
@@ -1,18 +1,11 @@
 @page
-@model hippolidays.EditModel
+@model hippolidays.Pages.Requests.EditModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
+<h1>Edit</h1>
 
 <h4>Request</h4>
 <hr />
@@ -42,5 +35,6 @@
     <a asp-page="./Index">Back to List</a>
 </div>
 
-</body>
-</html>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
