--- a/Pages/Requests/Index.cshtml
+++ b/Pages/Requests/Index.cshtml
@@ -1,18 +1,12 @@
 @page
-@model hippolidays.IndexModel
+@model hippolidays.Pages.Requests.IndexModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Index";
 }
 
-<!DOCTYPE html>
+<h1>Index</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
 <p>
     <a asp-page="Create">Create New</a>
 </p>
@@ -46,5 +40,3 @@
 }
     </tbody>
 </table>
-</body>
-</html>
