--- a/Pages/Requests/Delete.cshtml
+++ b/Pages/Requests/Delete.cshtml
@@ -13,21 +13,21 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Request.start_date)
+            @Html.DisplayNameFor(model => model.Request.Start_Date)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Request.start_date)
+            @Html.DisplayFor(model => model.Request.Start_Date)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Request.end_date)
+            @Html.DisplayNameFor(model => model.Request.End_Date)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Request.end_date)
+            @Html.DisplayFor(model => model.Request.End_Date)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Request.request_id" />
+        <input type="hidden" asp-for="Request.Request_Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
