--- a/Pages/Requests/Details.cshtml
+++ b/Pages/Requests/Details.cshtml
@@ -12,20 +12,20 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Request.start_date)
+            @Html.DisplayNameFor(model => model.Request.Start_Date)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Request.start_date)
+            @Html.DisplayFor(model => model.Request.Start_Date)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Request.end_date)
+            @Html.DisplayNameFor(model => model.Request.End_Date)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Request.end_date)
+            @Html.DisplayFor(model => model.Request.End_Date)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Request?.request_id">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Request?.Request_Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
