--- a/Pages/Requests/Edit.cshtml
+++ b/Pages/Requests/Edit.cshtml
@@ -13,16 +13,16 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Request.request_id" />
+            <input type="hidden" asp-for="Request.Request_Id" />
             <div class="form-group">
-                <label asp-for="Request.start_date" class="control-label"></label>
-                <input asp-for="Request.start_date" class="form-control" />
-                <span asp-validation-for="Request.start_date" class="text-danger"></span>
+                <label asp-for="Request.Start_Date" class="control-label"></label>
+                <input asp-for="Request.Start_Date" class="form-control" />
+                <span asp-validation-for="Request.Start_Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Request.end_date" class="control-label"></label>
-                <input asp-for="Request.end_date" class="form-control" />
-                <span asp-validation-for="Request.end_date" class="text-danger"></span>
+                <label asp-for="Request.End_Date" class="control-label"></label>
+                <input asp-for="Request.End_Date" class="form-control" />
+                <span asp-validation-for="Request.End_Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
