--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <image src=""><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a></image>
         </li>
     }
 </ul>
