--- a/Pages/Calendar.cshtml
+++ b/Pages/Calendar.cshtml
@@ -46,9 +46,11 @@
                     <div class="@GetBlockClasses(date)">
 
                         <div>@String.Format("{0:dd-MM-yy}", date["date"])</div>
-                        @foreach (Dictionary<string, object> request in (List<Dictionary<string, object>>) date["requests"])
-                        {
-                            <div class="request @request["request_status"]">@request["user_name"]</div>
+                        @foreach (Models.Request request in (List<Models.Request>) date["requests"])
+                            {
+                                //System.Diagnostics.Debug.WriteLine(request.request_status);
+
+                            <div class="request pending">@request.ApplicationUser?.Name</div>
                         }
 
                     </div>
