--- a/Pages/Holidays.cshtml
+++ b/Pages/Holidays.cshtml
@@ -54,7 +54,7 @@
                         <div>@String.Format("{0:ddd d MMMM}", request.Start_Date) - @String.Format("{0:ddd d MMMM}", request.End_Date)</div>
                     </div>
                     <div class="col-3 text-center my-auto">
-                        <a asp-page="./Edit" asp-route-id="@request.Request_Id">
+                        <a asp-page="Requests/Edit" asp-route-id="@request.Request_Id">
                             <button type="button" class="btn btn-outline-primary btn-sm">Edit</button>
                         </a>
                     </div>
