--- a/Pages/Approve.cshtml
+++ b/Pages/Approve.cshtml
@@ -45,18 +45,21 @@
         </ul>
 
         <div class="requests-container">
-            @foreach (Dictionary<string, object> request in (List<Dictionary<string, object>>)Model.viewData["requests"])
+            @if ((List<Models.Request>)Model.viewData["requests"] != null)
             {
-                <div class="row request">
-                    <div class="col-9">
-                        <div>@GetUpper((string)request["request_status"])</div>
-                        <div>@String.Format("{0:ddd d MMMM}", request["start_date"]) - @String.Format("{0:ddd d MMMM}", request["end_date"])</div>
+                @foreach (Models.Request request in (List<Models.Request>)Model.viewData["requests"])
+                {
+                    <div class="row request">
+                        <div class="col-9">
+                            @*<div>@GetUpper((string)request["request_status"])</div>*@
+                            <div>@String.Format("{0:ddd d MMMM}", request.Start_Date) - @String.Format("{0:ddd d MMMM}", request.End_Date)</div>
+                        </div>
+                        <div class="col-3 text-center my-auto">
+                            <button type="button" class="btn btn-outline-primary btn-sm">Approve</button>
+                            <button type="button" class="btn btn-outline-primary btn-sm">Reject</button>
+                        </div>
                     </div>
-                    <div class="col-3 text-center my-auto">
-                        <button type="button" class="btn btn-outline-primary btn-sm">Approve</button>
-                        <button type="button" class="btn btn-outline-primary btn-sm">Reject</button>
-                    </div>
-                </div>
+                }
             }
         </div>
     </div>
