--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,10 +37,13 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Requests/Create">Request Holiday</a>
                             </li>
-                        }
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Approve">Approve Holidays</a>
-                         </li>
+                            @if (User.IsInRole("Manager"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Approve">Approve Holidays</a>
+                                </li>
+                            }
+                         }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
