--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Calendar">Calendar</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Holidays">My Holiday</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Requests/Create">Request Holiday</a>
                             </li>
                             @if (User.IsInRole("Manager"))
@@ -43,7 +46,7 @@
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Approve">Approve Holidays</a>
                                 </li>
                             }
-                         }
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
