--- a/Pages/Requests/Edit.cshtml
+++ b/Pages/Requests/Edit.cshtml
@@ -14,6 +14,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Request.Request_Id" />
+            <input type="hidden" asp-for="Request.RequestStatusID" />
             <div class="form-group">
                 <label asp-for="Request.Start_Date" class="control-label"></label>
                 <input asp-for="Request.Start_Date" class="form-control" />
