--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - hippolidays - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - hippolidays
         </div>
     </footer>
 
