remove redundant a tag

--- a/Pages/Holidays.cshtml
+++ b/Pages/Holidays.cshtml
@@ -55,14 +55,14 @@
                     @if (item.RequestStatus.Status != "approved" && item.RequestStatus.Status != "rejected")
                     {
                         <div class="col-3 text-center my-auto">
-                            <a asp-page="Requests/Edit" asp-route-id="@item.Request_Id">
+                            <div>
                                 <a asp-page="Requests/Edit" class="btn btn-outline-primary btn-sm" asp-route-id="@item.Request_Id">
                                     Edit
                                 </a>
                                 <a asp-page="Requests/Delete" class="btn btn-outline-primary btn-sm" asp-route-id="@item.Request_Id">
                                     Cancel
                                 </a>
-                            </a>
+                            </div>
                         </div>
                         }
                 </div>
